--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -123,3 +123,72 @@
         font-weight: bold;
     }
 }
+
+@media screen and (max-width: 1095px) {
+    .container {
+        .containerHeader {
+            padding: 0 2rem;
+
+            buttom {
+                display: block;
+            }
+        }
+
+        img {
+            max-width: 600px;
+        }
+
+        div h1 {
+            font-size: 3rem;
+        }
+
+        div h2 {
+            font-size: 2.3rem;
+
+            span {
+                font-size: 2.3rem;
+            }
+        }
+
+        .sectionContent, .nextLevelContent {
+            padding: 0 2rem;
+        }
+    }
+
+}
+
+@media screen and (max-width: 950px) { 
+    .container {
+        .containerHeader {
+            flex-direction: column;
+
+            button {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }
+
+        div img {
+            max-width: 500px;
+        }
+
+        div h1 {
+            font-size: 3rem;
+        }
+
+        h2 {
+            font-size: 1rem;
+        }
+
+        .sectionContent {
+            flex-direction: column;
+            img {
+                margin-top: 2rem;
+                max-width: 400px;
+            }
+        }
+    }
+
+}
