--- a/src/pages/posts/styles.module.scss
+++ b/src/pages/posts/styles.module.scss
@@ -53,3 +53,30 @@
       }
     }
   }
+
+  .buttonNavigate {
+    display: flex;
+    margin-top: 2rem;
+    align-items: center;
+    justify-content: space-between;
+
+    div {
+      display: flex;
+    }
+
+    button {
+      margin: 0 5px;
+      border: 0;
+      background: var(--blue-900);
+      color: var(--white);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: .5rem;
+      border-radius: 5px;
+
+      siv {
+        padding: 0 3px;
+      }
+    }
+  }
